angular json update

--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,9 @@
 							"src/assets"
 						],
 						"styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
-            ],
+							"node_modules/bootstrap/dist/css/bootstrap.min.css",
+							"src/styles.css"
+						],
 						"scripts": []
 					},
 					"configurations": {
@@ -61,10 +61,10 @@
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
 						"production": {
-							"browserTarget": "todoist:build:production"
+							"buildTarget": "todoist:build:production"
 						},
 						"development": {
-							"browserTarget": "todoist:build:development"
+							"buildTarget": "todoist:build:development"
 						}
 					},
 					"defaultConfiguration": "development"
@@ -72,7 +72,7 @@
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
 					"options": {
-						"browserTarget": "todoist:build"
+						"buildTarget": "todoist:build"
 					}
 				},
 				"test": {
