--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,12 @@
 									"maximumError": "4kb"
 								}
 							],
+							"fileReplacements": [
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.prod.ts"
+								}
+							],
 							"outputHashing": "all"
 						},
 						"development": {
@@ -91,7 +97,11 @@
 							"node_modules/bootstrap/dist/css/bootstrap.min.css",
 							"src/styles.css"
 						],
-						"scripts": []
+						"scripts": [
+							"node_modules/jquery/dist/jquery.min.js",
+							"node_modules/@popperjs/core/dist/umd/popper.min.js",
+							"node_modules/bootstrap/dist/js/bootstrap.min.js"
+						]
 					}
 				}
 			}
