--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-  "name": "todoist",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^17.0.2",
-    "@angular/common": "^17.0.2",
-    "@angular/compiler": "^17.0.2",
-    "@angular/core": "^17.0.2",
-    "@angular/forms": "^17.0.2",
-    "@angular/platform-browser": "^17.0.2",
-    "@angular/platform-browser-dynamic": "^17.0.2",
-    "@angular/router": "^17.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.3",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.2",
-    "@angular/localize": "^17.0.2",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.2.2"
-  }
+	"name": "todoist",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^17.0.2",
+		"@angular/common": "^17.0.2",
+		"@angular/compiler": "^17.0.2",
+		"@angular/core": "^17.0.2",
+		"@angular/forms": "^17.0.2",
+		"@angular/platform-browser": "^17.0.2",
+		"@angular/platform-browser-dynamic": "^17.0.2",
+		"@angular/router": "^17.0.2",
+		"@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.0",
+		"@ngx-translate/core": "^15.0.0",
+		"@ngx-translate/http-loader": "^8.0.0",
+		"@popperjs/core": "^2.11.8",
+		"bootstrap": "^5.3.2",
+		"jquery": "^3.7.1",
+		"rxjs": "~7.8.0",
+		"tslib": "^2.3.0",
+		"zone.js": "~0.14.2"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^17.0.0",
+		"@angular/cli": "^17.0.0",
+		"@angular/compiler-cli": "^17.0.2",
+		"@angular/localize": "^17.0.2",
+		"@types/jasmine": "~4.3.0",
+		"jasmine-core": "~4.6.0",
+		"karma": "~6.4.0",
+		"karma-chrome-launcher": "~3.2.0",
+		"karma-coverage": "~2.2.0",
+		"karma-jasmine": "~5.1.0",
+		"karma-jasmine-html-reporter": "~2.1.0",
+		"typescript": "~5.2.2"
+	}
 }
