--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^17.0.2",
-		"@angular/common": "^17.0.2",
-		"@angular/compiler": "^17.0.2",
-		"@angular/core": "^17.0.2",
-		"@angular/forms": "^17.0.2",
-		"@angular/platform-browser": "^17.0.2",
-		"@angular/platform-browser-dynamic": "^17.0.2",
-		"@angular/router": "^17.0.2",
-		"@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.0",
+		"@angular/animations": "^17.0.9",
+		"@angular/common": "^17.0.0",
+		"@angular/compiler": "^17.0.0",
+		"@angular/core": "^17.0.0",
+		"@angular/forms": "^17.0.0",
+		"@angular/platform-browser": "^17.0.0",
+		"@angular/platform-browser-dynamic": "^17.0.0",
+		"@angular/platform-server": "^17.0.0",
+		"@angular/router": "^17.0.0",
+		"@angular/ssr": "^17.0.0",
+		"@ng-bootstrap/ng-bootstrap": "^16.0.0",
 		"@ngx-translate/core": "^15.0.0",
 		"@ngx-translate/http-loader": "^8.0.0",
-		"@popperjs/core": "^2.11.8",
 		"bootstrap": "^5.3.2",
-		"jquery": "^3.7.1",
+		"bootstrap-icons": "^1.11.2",
+		"express": "^4.18.2",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.2"
@@ -31,10 +33,11 @@
 	"devDependencies": {
 		"@angular-devkit/build-angular": "^17.0.0",
 		"@angular/cli": "^17.0.0",
-		"@angular/compiler-cli": "^17.0.2",
-		"@angular/localize": "^17.0.2",
-		"@types/jasmine": "~4.3.0",
-		"jasmine-core": "~4.6.0",
+		"@angular/compiler-cli": "^17.0.0",
+		"@types/express": "^4.17.17",
+		"@types/jasmine": "~5.1.0",
+		"@types/node": "^18.18.0",
+		"jasmine-core": "~5.1.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.0",
