chore: Update tsconfig.json with new import paths for config, data, and views

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
 		],
 		"paths": {
 			"@env/*": ["src/environments/*"],
+			"@config/*": ["src/app/config/*"],
+			"@data/*": ["src/app/data/*"],
+			"@views/*": ["src/app/views/*"],
 		}
 	},
 	"angularCompilerOptions": {
