--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@ng-bootstrap/ng-bootstrap": "^16.0.0",
 		"@ngx-translate/core": "^15.0.0",
 		"@ngx-translate/http-loader": "^8.0.0",
+		"@stripe/stripe-js": "^4.1.0",
 		"bootstrap": "^5.3.2",
 		"bootstrap-icons": "^1.11.2",
 		"express": "^4.18.2",
