chore: Update build configuration for frontend project

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
 	"version": 1,
 	"newProjectRoot": "projects",
 	"projects": {
-		"todolist": {
+		"frontend": {
 			"projectType": "application",
 			"schematics": {},
 			"root": "",
@@ -13,7 +13,7 @@
 				"build": {
 					"builder": "@angular-devkit/build-angular:browser",
 					"options": {
-						"outputPath": "dist/todolist",
+						"outputPath": "dist/frontend",
 						"index": "src/index.html",
 						"main": "src/main.ts",
 						"polyfills": [
@@ -51,7 +51,13 @@
 							"vendorChunk": true,
 							"extractLicenses": false,
 							"sourceMap": true,
-							"namedChunks": true
+							"namedChunks": true,
+							"fileReplacements": [
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.development.ts"
+								}
+							]
 						}
 					},
 					"defaultConfiguration": "production"
@@ -60,10 +66,10 @@
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
 						"production": {
-							"buildTarget": "todolist:build:production"
+							"buildTarget": "frontend:build:production"
 						},
 						"development": {
-							"buildTarget": "todolist:build:development"
+							"buildTarget": "frontend:build:development"
 						}
 					},
 					"defaultConfiguration": "development"
@@ -71,7 +77,7 @@
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
 					"options": {
-						"buildTarget": "todolist:build"
+						"buildTarget": "frontend:build"
 					}
 				},
 				"test": {
