--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@ngx-translate/core": "^15.0.0",
 		"@ngx-translate/http-loader": "^8.0.0",
 		"@stripe/stripe-js": "^4.1.0",
+		"@ng-select/ng-select": "^12.0.7",
 		"bootstrap": "^5.3.2",
 		"bootstrap-icons": "^1.11.2",
 		"express": "^4.18.2",
