--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "todoist",
+	"name": "boilerplate_frontend_web_angular",
 	"version": "0.0.0",
 	"scripts": {
 		"ng": "ng",
@@ -20,13 +20,13 @@
 		"@angular/platform-server": "^18.2.13",
 		"@angular/router": "^18.2.13",
 		"@angular/ssr": "^18.2.12",
-		"@ng-bootstrap/ng-bootstrap": "^16.0.0",
+		"@ng-bootstrap/ng-bootstrap": "^17.0.1",
 		"@ngx-translate/core": "^15.0.0",
 		"@ngx-translate/http-loader": "^8.0.0",
 		"@stripe/stripe-js": "^4.1.0",
-		"@ng-select/ng-select": "^12.0.7",
-		"bootstrap": "^5.3.2",
-		"bootstrap-icons": "^1.11.2",
+		"@ng-select/ng-select": "^13.9.1",
+		"bootstrap": "^5.3.3",
+		"bootstrap-icons": "^1.11.3",
 		"express": "^4.18.2",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
@@ -43,8 +43,6 @@
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.0",
-		"karma-jasmine": "~5.1.0",
-		"karma-jasmine-html-reporter": "~2.1.0",
-		"typescript": "~5.5.4"
+		"karma-jasmine": "~5.1.0"
 	}
 }
